[metadata]
name = proxpi
version = 0.1.0a0.dev0
url = https://github.com/EpicWink/proxpi
author = Laurie O
author_email = laurie_opperman@hotmail.com
license = MIT
description = Local PyPI mirror cache
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pypi, index, mirror, cache
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows

[options]
install_requires =
    flask
    requests
    beautifulsoup4
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[options.package_data]
proxpi = templates/*.html
