[metadata]
name = proxpi
url = https://github.com/EpicWink/proxpi
author = Laurie O
author_email = laurie_opperman@hotmail.com
license = MIT
description = PyPI caching mirror
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pypi, index, mirror, cache
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows

[options]
install_requires =
    dataclasses >= 0.6; python_version < "3.7"
    flask >= 2.0, < 4.0
    jinja2 ~= 3.0
    lxml ~= 4.8
    requests ~= 2.27
python_requires = ~= 3.6

packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[options.package_data]
proxpi = templates/*.html
